--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,10 +11,10 @@
 <body>
     <div class="main w-full min-h-screen bg-zinc-900">
         <div class="form p-10 text-white">
-            <form action="">
-                <input class="block w-full outline-none rounded-lg px-5 py-2 bg-zinc-800" type="text"
+            <form action="/create" method="post">
+                <input name="title" class="block w-full outline-none rounded-lg px-5 py-2 bg-zinc-800" type="text"
                     placeholder="Title goes here">
-                <textarea class="block w-full outline-none rounded-lg mt-2 px-5 py-2 bg-zinc-800 resize-none"
+                <textarea name="details" class="block w-full outline-none rounded-lg mt-2 px-5 py-2 bg-zinc-800 resize-none"
                     placeholder="Write your task details here"></textarea>
                 <input class="mt-2 bg-blue-600 px-5 py-2 rounded-md cursor-pointer" type="submit" value="create task">
             </form>
@@ -22,15 +22,14 @@
         <div class="tasks flex gap-3 flex-wrap p-10">
             <% if(files.length> 0){ %>
                 <% files.forEach(function(val){ %>
-                    <div class="task hidden w-72 px-3 py-4 rounded-md bg-zinc-800">
-                        <h1 class="text-white text-3xl tracking-tighter">Some Task Goes Here</h1>
-                        <a class="text-blue-500 inline-block mt-3" href="">Read More.</a>
+                    <div class="task min-w-72 px-3 py-4 rounded-md bg-zinc-800">
+                        <h1 class="text-white text-3xl tracking-tighter"> <%= val  %> </h1>
+                        <a class="text-blue-500 inline-block mt-3" href="/file/<%= val %>">Read More.</a>
                     </div>
                     <% }) %>
                         <% } else { %>
                             <h3 class="text-zinc-600 text-3xl text-center">No task yet</h3>
                             <% } %>
-
 
         </div>
     </div>
