--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
 
 <body>
     <div class="main w-full min-h-screen bg-zinc-900">
+<h1 class="text-4xl text-white pl-10 pt-10">DocStash.com</h1>
         <div class="form p-10 text-white">
             <form action="/create" method="post">
                 <input name="title" class="block w-full outline-none rounded-lg px-5 py-2 bg-zinc-800" type="text"
